--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 Flask==2.2.2
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.0.3
+Flask-Migrate
 gradescope-utils==0.5.0
 greenlet==2.0.2
 idna==3.4
